LDEV-3914: Tweaked when the sidebar is displayed to reduce flicker and added an override parameter for tools that want to do their own layout (like Data Collection and Wiki) to stop the usual panel being loaded.

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -348,6 +348,7 @@ a.button-add-item:before {
 	nav.sidebar{
 		  border-radius: 0px;
 		  box-shadow: 0 1px 1px rgba(8, 8, 8, 0.88);
+		  min-height:300px;
 	}
  
 	/*Center Brand*/
